--- a/package.json
+++ b/package.json
@@ -4,9 +4,16 @@
   "version": "0.1.0",
   "type": "module",
   "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
     "tauri": "tauri"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^2"
+  },
+  "dependencies": {
+    "typescript": "^5.9.2",
+    "vite": "^7.1.4"
   }
 }
