--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tauri-apps/cli": "^2"
   },
   "dependencies": {
+    "tailwindcss": "^4.1.12",
     "typescript": "^5.9.2",
     "vite": "^7.1.4",
     "vite-gleam": "^0.4.3"
